Add OLED text editor with rotary encoder and SPIFFS storage

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(
-    SRCS "main.c" "editor.c" "display.c" "sdcard.c" "usb_host_stub.c"
+    SRCS "main.c" "editor.c" "display.c" "sdcard.c" "encoder.c"
     INCLUDE_DIRS "."
 )
